# rank2

./: README.md  bench.sh  build.sh  configure.sh  default.nix  document.sh  environment.sh  interpreter.sh  provision.sh  rank2.cabal  reconfigure.sh  run.sh  shell.nix  stack.yaml  test.sh  verify.sh  watch.sh
benchmarks/: Bench.hs
executables/: Main.hs
nix/: rank2.nix  shell.nix
sources/: Rank2.hs
sources/Rank2/: Core.hs  Example.hs  Extra.hs  Types.hs
tests/: DocTests.hs  PropertyTests.hs  UnitTests.hs
tests/Rank2/: Property.hs  Test.hs  Unit.hs
